# ExcelMinimalApp

./: CMakeLists.txt  Main.qml  appcore.cpp  appcore.h  excelhelper.cpp  excelhelper.h  main.cpp  xlcell.cpp  xlcell.h
